# my-arithmetic-ajaud01

./: .gitlab-ci.yml  .readthedocs.yaml  pyproject.toml
.github/workflows/: main.yml
docs/: conf.py  pgcd.rst
docs/_build/doctrees/: environment.pickle  index.doctree  pgcd.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  pgcd.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/my_arithmetic_ajaud01/: pgcd.html
docs/_build/html/_sources/: index.rst.txt
my_arithmetic_ajaud01/: pgcd.py
tests/: test_pgcd.py
